--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 [env:nanoatmega328]
 platform = atmelavr
 framework = arduino
-board = nanoatmega328new
+board = nanoatmega328
 
 ; [env:esp8266]
 ; platform = espressif8266
