--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:nanoatmega328]
-platform = atmelavr
-framework = arduino
-board = nanoatmega328
-
-; [env:esp8266]
-; platform = espressif8266
+; [env:nanoatmega328]
+; platform = atmelavr
 ; framework = arduino
-; board = nodemcuv2
+; board = nanoatmega328
+
+[env:esp8266]
+platform = espressif8266
+framework = arduino
+board = nodemcuv2
