--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,9 @@ board = nanoatmega328
 ; platform = espressif8266
 ; framework = arduino
 ; board = nodemcuv2
+
+; [env:genericSTM32F103C8]
+; platform = ststm32
+; framework = arduino
+; board = bluepill_f103c8
+; upload_protocol = dfu
